.happypack/s--181068357
SyntaxError: Unterminated string constant (120:15)

[0m [90m 118 | [39m      arry[33m.[39mpush({
 [90m 119 | [39m        element[33m:[39m [32m'#step-3'[39m[33m,[39m
[31m[1m>[22m[39m[90m 120 | [39m        intro[33m:[39m [32m"åœ¨è®¾è®¡å­¦ä¹ ä»»åŠ¡æ—¶ï¼Œ[39m
 [90m     | [39m               [31m[1m^[22m[39m
 [90m 121 | [39m        æ‚¨å¯ä»¥æŒ‰ç…§è¯¾æ—¶å»è®¾ç½®é¢„ä¹ ã€å­¦ä¹ ã€ç»ƒä¹ ã€ä½œä¸šã€è¯¾å¤–è¿™å‡ ä¸ªç¯èŠ‚ï¼Œ
 [90m 122 | [39m        æ¯ä¸ªç¯èŠ‚éƒ½å¯ä»¥é€šè¿‡å„ç§æ•™å­¦æ‰‹æ®µæ¥å®ç°ã€‚[33m![39m[32m",[39m
 [90m 123 | [39m      })[0m

BabelLoaderError: SyntaxError: Unterminated string constant (120:15)

[0m [90m 118 | [39m      arry[33m.[39mpush({
 [90m 119 | [39m        element[33m:[39m [32m'#step-3'[39m[33m,[39m
[31m[1m>[22m[39m[90m 120 | [39m        intro[33m:[39m [32m"åœ¨è®¾è®¡å­¦ä¹ ä»»åŠ¡æ—¶ï¼Œ[39m
 [90m     | [39m               [31m[1m^[22m[39m
 [90m 121 | [39m        æ‚¨å¯ä»¥æŒ‰ç…§è¯¾æ—¶å»è®¾ç½®é¢„ä¹ ã€å­¦ä¹ ã€ç»ƒä¹ ã€ä½œä¸šã€è¯¾å¤–è¿™å‡ ä¸ªç¯èŠ‚ï¼Œ
 [90m 122 | [39m        æ¯ä¸ªç¯èŠ‚éƒ½å¯ä»¥é€šè¿‡å„ç§æ•™å­¦æ‰‹æ®µæ¥å®ç°ã€‚[33m![39m[32m",[39m
 [90m 123 | [39m      })[0m

    at transpile (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:268:5)
    at /Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyWorker.js:32:3)
    at Object.HappyForegroundThreadPool.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:320:25)
    at HappyPlugin.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:236:32)
    at Object.HappyLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyLoader.js:34:15)
    at WEBPACK_CORE_LOADER_EXECUTION (/Users/kz/projects/edusoho/node_modules/.0.6.9@webpack-core/lib/NormalModuleMixin.js:155:71)